--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ scripts/.DS_Store
 .ipynb_checkpoints/FigureA-checkpoint.ipynb
 scripts/grympydata/~$grmdata.xlsx
 scripts/.DS_Store
+scripts/.DS_Store
+scripts/.DS_Store
