--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ scripts/grympydata/~$grmdata.xlsx
 scripts/.DS_Store
 scripts/.DS_Store
 scripts/.DS_Store
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
+*.ai
